Added more JavaDoc for CustomItem and APIReferences